# tq-local

./: .gitignore  README.md  RESEARCH.md  models.md  pyproject.toml  remote_setup.md
examples/: colab_vram_test.ipynb  modal_smoke.py
research/: README.md  modal_app.py
src/turboquant/: __init__.py  cli.py  config.py  constants.py  modal_app.py  prompt_suites.py  sources.py
src/turboquant/adapters/: transformers.py
src/turboquant/benchmarks/: __init__.py  niah.py  paper.py  upstream.py
src/turboquant/modeling/: qwq.py
src/turboquant/quantization/: __init__.py  attention_metrics.py  protocol.py  turboquant_mse.py
src/turboquant/runtime/: __init__.py  attention.py  experiment_log.py  kv_artifacts.py  kv_capture.py  memory_accounting.py  metadata.py  packed_qmse_cache.py  query_capture.py  triton_kernels.py
