[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turboquant"
version = "0.1.0"
description = "TurboQuant replication project for Qwen/QwQ-32B on Modal"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "accelerate==1.13.0",
  "huggingface_hub[hf_transfer]==1.6.0",
  "numpy==2.4.3",
  "safetensors==0.7.0",
  "scipy==1.17.1",
  "torch==2.10.0",
  "transformers==5.3.0",
]

[project.optional-dependencies]
benchmarks = [
  "datasets==4.7.0",
  "jsonlines==4.0.0",
  "pandas==3.0.1",
  "tqdm==4.67.3",
]
modal = [
  "modal==1.3.5",
]
kernels = [
  "triton>=3.2.0",
]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.11.4",
]

[project.scripts]
turboquant = "turboquant.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
