[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turboquant"
version = "0.1.0"
description = "TurboQuant-style KV-cache compression runtime for Hugging Face Transformers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "accelerate==1.13.0",
  "hf-transfer==0.1.9",
  "huggingface_hub==1.6.0",
  "numpy==2.4.3",
  "safetensors==0.7.0",
  "scipy==1.17.1",
  "torch==2.10.0",
  "torchvision==0.25.0",
  "transformers==5.3.0",
]

[project.scripts]
turboquant = "turboquant.cli:main"

[project.optional-dependencies]
benchmarks = [
  "datasets==4.7.0",
  "jsonlines==4.0.0",
  "matplotlib>=3.9",
  "pandas==3.0.1",
  "tqdm==4.67.3",
]
modal = [
  "modal==1.3.5",
]
kernels = [
  "triton>=3.2.0",
]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.11.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
